--- a/index.html
+++ b/index.html
@@ -28,14 +28,19 @@
 
         <!-- Work Experience Section -->
         <div class="row mt-5">
-            <div class="col-12">
+            <div class="col-4">
                 <h3 class="section-title">Work Experience:</h3>
                 <ul class="experience-list">
                     <li>5 years of experience in design and brand marketing.</li>
                     <li>Passionate to work with the local brand.</li>
                     <li>Collaboration with leadership and various teams.</li>
                 </ul>
+                
             </div>
+                <div class="col-8">
+                 <img src="Forest.png" alt="Forest" class="img-fluid profile-pic mb-4">
+                 </div>
+
         </div>
 
         <!-- Contact Section -->
