--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row p-4 border rounded">
             <!-- About Me Title Section -->
             <div class="col-12 text-center">
                 <h1 class="about-title">ABOUT ME</h1>
@@ -27,7 +27,7 @@
         </div>
 
         <!-- Work Experience Section -->
-        <div class="row mt-5">
+        <div class="row mt-5 p-4 border rounded">
             <div class="col-4">
                 <h3 class="section-title">Work Experience:</h3>
                 <ul class="experience-list">
@@ -44,7 +44,7 @@
         </div>
 
         <!-- Contact Section -->
-        <div class="row mt-5">
+        <div class="row mt-5 p-4 border rounded">
             <div class="col-12 text-center">
                 <p class="contact-info">CONTACT: hello@allaboutme.com | www.allaboutme.com</p>
             </div>
